<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="search_results_tab_titles" translatable="false">
        <item>@string/source_novel_updates</item>
        <item>@string/source_lnmtl</item>
    </string-array>
    <string-array name="search_results_tab_titles_unlocked" translatable="false">
        <item>@string/source_novel_updates</item>
        <item>@string/source_royalroad</item>
        <item>@string/source_lnmtl</item>
    </string-array>
    <string-array name="search_results_tab_titles_developer_only" translatable="false">
        <item>@string/source_novel_updates</item>
        <item>@string/source_royalroad</item>
        <item>@string/source_novelfull</item>
        <item>@string/source_lnmtl</item>
    </string-array>
    <string-array name="settings_list" translatable="false">
        <item>@string/general</item>
        <item>@string/reader</item>
        <item>@string/title_read_aloud</item>
        <item>@string/title_activity_ai_tts_settings</item>
        <item>@string/mentions</item>
        <item>@string/sync</item>
        <item>@string/donate_developer</item>
        <item>@string/check_for_updates</item>
        <item>@string/about_us</item>
        
    </string-array>
    <string-array name="sync_list" translatable="false">
        <item>@string/experimental_sync_disclaimer</item>
        <item>@string/source_novel_updates</item>
        
        
    </string-array>
    <string-array name="sync_options" translatable="false">
        <item>@string/enable_sync</item>
        <item>@string/sync_status</item>
        <item>@string/sync_log_in</item>
        <item>@string/sync_add_novels</item>
        <item>@string/sync_delete_novels</item>
        <item>@string/sync_bookmarks</item>
        <item>@string/make_full_sync</item>
        
        
        
        
        <item>@string/sync_forget</item>
    </string-array>
    <string-array name="sync_options_descriptions" translatable="false">
        <item>@string/enable_sync_description</item>
        <item>@string/enable_sync_description</item>
        <item>@string/sync_log_in_description</item>
        <item>@string/sync_add_novels_description</item>
        <item>@string/sync_delete_novels_description</item>
        <item>@string/sync_bookmarks_description</item>
        <item>@string/make_full_sync_description</item>
        
        
        
        
        <item>@string/sync_forget_description</item>
    </string-array>
    <string-array name="mention_settings_list" translatable="false">
        <item>@string/languages_supported</item>
        <item>@string/libraries_used</item>
        <item>@string/contributions</item>
        <item>@string/copyright_notice</item>
        <item>@string/whats_changed</item>
    </string-array>
    <string-array name="general_titles_list" translatable="false">
        <item>@string/first_screen_library</item>
        <item>@string/backup_and_restore</item>
        
        <item>@string/disable_notifications</item>
        <item>@string/change_language</item>
        <item>@string/night_mode</item>
        <item>@string/scrolling_text</item>
        <item>@string/show_chapters_left_badge</item>
        <item>@string/dns_over_https</item>
        <item>@string/forced_webview_domains</item>
        <item>@string/auto_app_update</item>
        <item>@string/download_storage_location</item>
        <item>@string/clear_cloudflare_cookies</item>
    </string-array>
    <string-array name="general_subtitles_list" translatable="false">
        <item>@string/first_screen_library_description</item>
        <item>@string/backup_and_restore_description</item>
        
        <item>@string/disable_notifications_description</item>
        <item>@string/locale_system_default</item>
        <item>@string/night_mode_description</item>
        <item>@string/scrolling_text_description</item>
        <item>@string/show_chapters_left_badge_description</item>
        <item>@string/dns_over_https_description</item>
        <item>@string/forced_webview_domains_description</item>
        <item>@string/auto_app_update_description</item>
        <item>@string/download_storage_location_description</item>
        <item>@string/clear_cloudflare_cookies_description</item>
    </string-array>
    <string-array name="dns_over_https_list" translatable="false">
        <item>@string/dns_none</item>
        <item>@string/dns_cloudflare</item>
        <item>@string/dns_google</item>
    </string-array>
    <string-array name="backup_and_restore_titles_list" translatable="false">
        <item>@string/internal_clear_data</item>
        <item>@string/backup_data</item>
        <item>@string/restore_data</item>
        <item>@string/backup_frequency</item>
    </string-array>
    <string-array name="backup_and_restore_subtitles_list" translatable="false">
        <item>@string/internal_clear_data_description</item>
        <item>@string/backup_data_description</item>
        <item>@string/restore_data_description</item>
        <item>@string/backup_frequency_description</item>
    </string-array>
    <string-array name="reader_mode_menu_titles_list" translatable="false">
        <item>@string/title_reader</item>
        <item>@string/title_night</item>
        <item>@string/title_java_script</item>
        <item>@string/title_fonts</item>
        <item>@string/title_fonts_size</item>

        <item>@string/title_open_in_browser</item>

        <item>@string/title_more_settings</item>
        <item>@string/title_read_aloud</item>
    </string-array>
    <string-array name="backup_and_restore_options" translatable="false">
        <item>@string/simple_text_backup</item>
        <item>@string/title_library</item>
        <item>@string/preferences</item>
        <item>@string/downloaded_files</item>
    </string-array>
    <string-array name="backup_frequency_options" translatable="false">
        <item>@string/backup_frequency_manual</item>
        <item>@string/backup_frequency_Daily</item>
        <item>@string/backup_frequency_Weekly</item>
    </string-array>
    <string-array name="reader_background_color_options" translatable="false">
        <item>@string/day_mode_background_color</item>
        <item>@string/day_mode_text_color</item>
        <item>@string/night_mode_background_color</item>
        <item>@string/night_mode_text_color</item>
    </string-array>
    <string name="app_name" translatable="false">Novel Library</string>
    <string name="default_notification_channel_id" translatable="false">io.github.gmathi.novellibrary.channel_id.DEFAULT</string>
    <string name="default_notification_channel_name" translatable="false">Default</string>
    <string name="default_notification_channel_description" translatable="false">Ungrouped notification go here by default</string>
    <string name="downloads_notification_channel_id" translatable="false">io.github.gmathi.novellibrary.channel_id.DOWNLOADS</string>
    <string name="downloads_notification_channel_name" translatable="false">Downloads</string>
    <string name="downloads_notification_channel_description" translatable="false">Shows the download progress</string>
    <string name="new_chapters_notification_channel_id" translatable="false">io.github.gmathi.novellibrary.channel_id.NEW_CHAPTERS</string>
    <string name="new_chapters_notification_channel_name" translatable="false">New Chapters</string>
    <string name="new_chapters_notification_channel_description" translatable="false">Shows the new chapters</string>
    <string name="tts_notification_channel_id" translatable="false">io.github.gmathi.novellibrary.channel_id.TTS</string>
    <string name="tts_notification_channel_name" translatable="false">Now Playing</string>
    <string name="tts_notification_channel_description" translatable="false">Shows the TTS for the current novel/chapter</string>
    <string name="backup_and_restore_notification_channel_id" translatable="false">io.github.gmathi.novellibrary.channel_id.BACKUP_RESTORE</string>
    <string name="backup_and_restore_notification_channel_name" translatable="false">@string/backup_and_restore</string>
    <string name="backup_and_restore_notification_channel_description" translatable="false">Shows the backup and restore progress</string>
    <string name="title_activity_nav_drawer" translatable="false">@string/app_name</string>
    <string name="title_activity_reader_pager" translatable="false">Reader Pager</string>
    <string name="title_activity_libraries_used" translatable="false">@string/libraries_used</string>
    <string name="title_activity_contributions" translatable="false">@string/contributions</string>
    <string name="title_activity_copyright" translatable="false">@string/copyright_notice</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_recently_updated_novels">Recently Updated Novels</string>
    <string name="title_activity_recently_viewed_novels">Recently Viewed Novels</string>
    <string name="action_sync">Sync for updates</string>
    <string name="title_library">Library</string>
    <string name="title_search">Search</string>
    <string name="title_downloads">Downloads</string>
    <string name="download">Download</string>
    <string name="remove">Remove</string>
    <string name="add_to_library">Add To Library</string>
    <string name="sort">Sort</string>
    <string name="sort_chapters">Sort Chapters</string>
    <string name="theme">Theme</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="close_menu">Close Menu</string>
    <string name="close">Close</string>
    <string name="text_size">Text Size</string>
    <string name="bug_report">Report Bug</string>
    <string name="download_chapters">Download Selected</string>
    <string name="mark_read">Mark Read</string>
    <string name="mark_unread">Mark Unread</string>
    <string name="unread">Unread</string>
    <string name="read">Read</string>
    <string name="quick_access">Quick Access</string>
    <string name="select_all">Select All</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="download_novel">Download Novel</string>
    <string name="import_reading_list">Import Reading List</string>
    <string name="join_us_on_discord">Join us on Discord</string>
    <string name="other">Other</string>
    <string name="delete_chapters">Delete Download(s)</string>
    <string name="title_reader">Reader Mode</string>
    <string name="title_java_script">JavaScript</string>
    <string name="title_fonts">Fonts</string>
    <string name="title_fonts_size">Font Size</string>
    <string name="title_open_in_browser">Open in Browser</string>
    <string name="refresh_cloud_flare_cookies">Refresh CloudFlare Cookies</string>
    <string name="assign_novel_section">Assign Novel Section</string>
    <string name="select_interval">Select Interval</string>
    <string name="title_read_aloud">Read Aloud</string>
    <string name="stop">Stop</string>
    <string name="app_icon">AppIcon</string>
    <string name="play">Play</string>
    <string name="title_more_settings">More Settings</string>
    <string name="reset_novel">Hard Reset Novel</string>
    <string name="title_activity_recent_novels">Recent Novels</string>
    <string name="title_activity_extensions">Manage Extensions</string>
    <string name="tts_merge_buffer_chapters">Merge All Links To Single Page</string>
    <string name="tts_pitch">Pitch</string>
    <string name="tts_rate">Speech rate</string>
    <string name="auto_read_next_chapter">Auto Read Next Chapter</string>
    <string name="tts_mark_chapters_read">Mark chapters as read</string>
    <string name="tts_move_bookmark">Move bookmark</string>
    <string name="auto_stop_timer">Auto-stop timer</string>
    <string name="set_auto_stop_timer" formatted="false">Set timer (%02d:%02d)</string>
    <string name="off">Off</string>
</resources>