<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black"
            android:title="@string/title_search"/>

        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_book_white_vector"
            android:title="@string/title_library"/>

        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_file_download_black_vector"
            android:title="@string/title_downloads"/>

    </group>

    <item android:title="@string/quick_access">
        <menu>
            <!--<item-->
            <!--android:id="@+id/app_bar_switch"-->
            <!--android:title="Light Theme"-->
            <!--app:actionLayout="@layout/switch_item"/>-->
            <!--<item-->
            <!--android:id="@+id/nav_share"-->
            <!--android:icon="@drawable/ic_menu_share"-->
            <!--android:title="Share"/>-->
            <!--<item-->
            <!--android:id="@+id/app_bar_search"-->
            <!--android:actionViewClass="android.widget.SearchView"-->
            <!--android:icon="@drawable/ic_search_black"-->
            <!--android:title="Search"/>-->

            <item
                android:id="@+id/nav_refresh_cloud_flare_cookies"
                android:icon="@drawable/ic_refresh_white_vector"
                android:title="@string/refresh_cloud_flare_cookies"/>

            <item
                android:id="@+id/nav_recently_updated"
                android:icon="@drawable/ic_history_white_vector"
                android:title="@string/title_activity_recently_updated_novels"/>

            <item
                android:id="@+id/nav_recently_viewed"
                android:icon="@drawable/ic_update_white_vector"
                android:title="@string/title_activity_recently_viewed_novels"/>


            <!--<item-->
            <!--android:id="@+id/nav_legal"-->
            <!--android:icon="@drawable/ic_account_legal_white_vector"-->
            <!--android:title="@string/legal"/>-->
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_white_vector"
                android:title="@string/title_activity_settings"/>

            <item
                android:id="@+id/nav_discord_link"
                android:icon="@drawable/discord_icon"
                android:title="@string/join_us_on_discord"/>
        </menu>
    </item>


</menu>
