<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.mgn.bingenovelreader.fragment.LibraryFragment">


    <item
        android:id="@+id/action_add_to_library"
        android:icon="@drawable/ic_add_box_white_vector"
        android:title="@string/download_chapters"
        android:titleCondensed="@string/download"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_check_all_white_vector"
        android:title="@string/select_all"
        android:titleCondensed="@string/select_all"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_clear_selection"
        android:icon="@drawable/ic_uncheck_all_white_vector"
        android:title="@string/clear_selection"
        android:titleCondensed="@string/clear_selection"
        app:showAsAction="ifRoom"/>

</menu>
