<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/side_menu_padding"
    android:paddingTop="@dimen/side_menu_height">

    <TableRow>

        <TextView
            android:layout_weight="1"
            android:text="@string/auto_stop_timer" />
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp">

        <Button
            android:id="@+id/autoStopTimerPick"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/set_auto_stop_timer"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/autoStopTimerStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:text="@string/off"
                android:textAlignment="textEnd"
                tools:text="60:60" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/autoStopTimerSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp">

        <io.github.gmathi.novellibrary.util.view.TwoWaySeekBar
            android:id="@+id/pitch"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/tts_pitch"
            android:progress="100"
            app:maxValue="200"
            app:minValue="50" />

        <TextView android:text="@string/tts_pitch" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp">

        <io.github.gmathi.novellibrary.util.view.TwoWaySeekBar
            android:id="@+id/speechRate"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/tts_rate"
            android:progress="100"
            app:maxValue="200"
            app:minValue="50" />

        <TextView android:text="@string/tts_rate" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp">

        <TextView
            android:layout_weight="1"
            android:text="@string/auto_read_next_chapter" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/autoReadNextChapter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp">

        <TextView
            android:layout_weight="1"
            android:text="@string/tts_move_bookmark" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/moveBookmark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp">

        <TextView
            android:layout_weight="1"
            android:text="@string/tts_mark_chapters_read" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/markRead"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp">

        <TextView
            android:layout_weight="1"
            android:text="@string/tts_merge_buffer_chapters" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/mergeChapters"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </TableRow>

</TableLayout>