<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/app_icon"
        android:padding="8dp"
        />

    <LinearLayout
        android:id="@+id/containerActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/play"
            app:srcCompat="@drawable/ic_circle_play_white" />

        <ImageView
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stop"
            app:srcCompat="@drawable/ic_clear_white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/containerNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/containerActions"
        android:layout_toEndOf="@id/cover"
        android:orientation="vertical">

        <TextView
            android:id="@+id/novelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textSize="17sp"
            tools:text="American Idiot" />

        <TextView
            android:id="@+id/chapterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            tools:text="Green Day" />
    </LinearLayout>

</RelativeLayout>